--- a/index.html
+++ b/index.html
@@ -23,20 +23,17 @@
                   Shengtao Tan
                 </p>
                 <p>
-                  I’m currently a Master’s student in Robotics, Cognition and Intelligence at the Technical University of Munich (TUM), with a strong focus on computer vision, AI-driven robotics, and autonomous systems..
+                  I’m currently a Master’s student in Robotics, Cognition and Intelligence at the Technical University of Munich (TUM), with a strong focus on robotic manipulation and perception of the autonomous systems
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:jonbarron@gmail.com">Email</a> &nbsp;/&nbsp;
+                  <a href="mailto:terence0tan@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
-                  <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp;
-                  <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Scholar</a> &nbsp;/&nbsp;
-                  <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp;
-                  <a href="https://bsky.app/profile/jonbarron.bsky.social">Bluesky</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/jonbarron/">Github</a>
+                  <a href="linkedin.com/in/shengtao-tan-47a45b1a2">Linkedin</a> &nbsp;/&nbsp;
+                  <!--<a href="https://github.com/jonbarron/">Github</a>-->
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
-                <a href="images/JonBarron.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/JonBarron.jpg" class="hoverZoomLink"></a>
+                <a href="images/IMG_0644.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/IMG_0644.jpg" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
@@ -4243,6 +4240,7 @@ for Topologically Varying Neural Radiance Fields</span>
             </tr>
 
 -->
+<!-- 
             <tr>
               <td align="center" style="padding:16px;width:20%;vertical-align:middle">
 						     <div class="colored-box" style="background-color: #aaba9e;">
@@ -4301,14 +4299,14 @@ for Topologically Varying Neural Radiance Fields</span>
                 <a href="http://aima.cs.berkeley.edu/">Figures, "Artificial Intelligence: A Modern Approach", 3rd Edition</a>
               </td>
             </tr>
-            
+          -->            
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Feel free to steal this website's <a href="https://github.com/jonbarron/jonbarron_website">source code</a>. <strong>Do not</strong> scrape the HTML from this page itself, as it includes analytics tags that you do not want on your own website &mdash; use the github code instead. Also, consider using <a href="https://leonidk.com/">Leonid Keselman</a>'s <a href="https://github.com/leonidk/new_website">Jekyll fork</a> of this page.
+                  Design and source code from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron's website</a>. 
                 </p>
               </td>
             </tr>
