--- a/index.html
+++ b/index.html
@@ -72,19 +72,14 @@
               </td>
               <td style="padding:8px;width:80%;vertical-align:middle">
                 <a href="https://creiser.github.io/binary_opacity_grid/">
-                  <span class="papertitle">Binary Opacity Grids: Capturing Fine Geometric Detail for Mesh-Based View Synthesis
+                  <span class="papertitle">A Vision-Language Action Framework for Object Grasping in Clutter Scenarios
         </span>
                 </a>
                 <br>
-                <a href="https://creiser.github.io/">Christian Reiser</a>,
-                <a href="http://stephangarbin.com/">Stephan J. Garbin</a>,
-                <a href="https://pratulsrinivasan.github.io/">Pratul Srinivasan</a>,
-                <a href="https://dorverbin.github.io/">Dor Verbin</a>,
-                <a href="https://szeliski.org/RichardSzeliski.htm">Richard Szeliski</a>,
-                <a href="https://bmild.github.io/">Ben Mildenhall</a>,
-                <strong>Jonathan T. Barron</strong>,
-                <a href="https://phogzone.com/">Peter Hedman</a>*,
-                <a href="https://www.cvlibs.net/">Andreas Geiger</a>*		
+                <!--<a href="https://creiser.github.io/">Christian Reiser</a>,-->
+                <strong>Shengtao Tan</strong>,
+                <a href="https://hucaofighting.github.io/">Hu Cao</a>*
+                <!--
                 <br>
                 <em>SIGGRAPH</em>, 2024
                 <br>
@@ -94,12 +89,36 @@
                 /
                 <a href="https://arxiv.org/abs/2402.12377">arXiv</a>
                 <p></p>
+                -->
                 <p>
                 Applying anti-aliasing to a discrete opacity grid lets you render a hard representation into a soft image, and this enables highly-detailed mesh recovery.
                 </p>
               </td>
             </tr>
 
+
+    <tr>
+              <td style="padding:16px;width:20%;vertical-align:middle">
+                <img src='images/graphrelate3d.png' width="100%">
+              </td>
+              <td style="padding:8px;width:80%;vertical-align:middle">
+                <strong>IEEE ITSC 2024:<br>
+                  GraphRelate3D: Context-Dependent 3D Object Detection with Inter-Object Relationship Graphs
+                </strong>
+                <p>
+                  We introduce a GNN-based object relation module to learn the spatial context explicitly to improve 3D object detection.
+                </p>
+                <p>
+                  As a co-author, my contributions were:<br>
+                  • Software setup in Docker container.<br>
+                  • Programming of graph constructor and GNN-module.<br>
+                  • Configuration setups for experiments, analysis of results.<br>
+                  • Code cleaning.
+                </p>
+                <a href="https://github.com/" style="display:inline-block;margin-right:10px;padding:6px 12px;border:1px solid #ccc;border-radius:4px;text-decoration:none;">GitHub</a>
+                <a href="https://arxiv.org/" style="display:inline-block;padding:6px 12px;border:1px solid #ccc;border-radius:4px;text-decoration:none;">arxiv</a>
+              </td>
+      </tr>
     
     <tr onmouseout="bolt3d_stop()" onmouseover="bolt3d_start()"  bgcolor="#ffffd0">
       <td style="padding:16px;width:20%;vertical-align:middle">
